fixed alignment of sponsors logos

--- a/pycones/static/less/utils.less
+++ b/pycones/static/less/utils.less
@@ -174,3 +174,10 @@ figure {
 .img-top-rounded {
   .border-top-radius(6px);
 }
+
+.col-vertical-middle-fixed {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+  margin: auto -5px auto auto;
+}
